--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "material-ui": "^0.20.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.8.4",
+    "react-icons": "^3.7.0",
     "react-mdl": "^1.11.0",
     "react-native": "^0.58.6",
+    "react-native-elements": "^1.1.0",
+    "react-particles-js": "^2.7.0",
+    "react-pdf": "^4.1.0",
     "react-pokemon-gif": "./react-pokemon-gif",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-vertical-timeline-component": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
