--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@react-pdf/renderer": "^1.6.3",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "pdfjs-dist": "^2.1.266",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-addons-shallow-compare": "^15.6.2",
@@ -17,7 +19,9 @@
     "react-native-elements": "^1.1.0",
     "react-particles-js": "^2.7.0",
     "react-pdf": "^4.1.0",
+    "react-pdf-js": "^5.1.0",
     "react-pokemon-gif": "./react-pokemon-gif",
+    "react-read-pdf": "^2.0.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-vertical-timeline-component": "^2.4.0"
