--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://anthony-bell.github.io/my-portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@react-pdf/renderer": "^1.6.3",
+    "gh-pages": "^2.1.1",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "pdfjs-dist": "^2.1.266",
@@ -27,6 +29,8 @@
     "react-vertical-timeline-component": "^2.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
